# thanosql-ai-chat

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  README.md  pyproject.toml
app/: _chatbot.py  answer.py  chat_schema.py  chatbot.py  cl_app.py  client.py  exception.py  feedback.py  log.py  main.py  question.py  schema.py  search.py  settings.py  task.py  test.ipynb  util.py
app/.chainlit/: config.toml
app/data/: 사회적배려대상자_도시가스요금_경감지침.pkl  사회적복지시설_도시가스요금_경감지침.pkl
app/data/QC/: k40_top1_false.xlsx  k40_top1_true_241112.xlsx  단가표_질문.csv  단가표_질문.xlsx  스마트마인드 QC 예시 질문 검토 완료.xlsx  유형별_한개_질문.xlsx
app/data/RFC/: Function Call 명세서_v1.5.xlsx  Function_desc.xlsx  rfc_function_info.xlsx  rfc_info.csv  rfc_input.xlsx  rfc_output.xlsx
app/data/chatbot/: table_dict.json
app/data/prompt/: __init__.py  question_prompts.py  search_prompts.py
app/data/공급규정/: 인천광역시_도시가스_공급규정.pkl  경기도_도시가스_공급규정.pkl  인천광역시_도시가스_공급규정_개정_전문_통보용.hwp
app/data/단가표/: 요금단가표(경기도).csv  단가표.xlsx  (+6 more)
app/models/: __init__.py
app/modules/: __init__.py
app/router/: __init__.py  router_utils.py
app/tests/: test-database.py  test-router.py  test-setting_router.py
app/utils/: __init__.py  logger.py  settings.py  utils.py
docker/: .env.example  .monitor-docker-compose.yml.swp  Dockerfile  dependencies.txt  dev.docker-compose.yml  docker-compose.yml  env.sample  monitor-docker-compose.yml  requirements.txt
docker/loki/: loki-config.yaml
docker/promtail/: config.yml
docker/redis/: Dockerfile  README.md  functions.json  functions.sql  init.sh  redis.conf
tests/: test-chat.py  test-database.py  test-logging.py  test-settings-router.py  test.ipynb
(+40 files in other folders)
